[package]
name = "todo"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17.0"
crossterm = "0.23.1"
unicode-width = "0.1.9"
rusqlite = { version = "0.27.0", features = ["bundled"] }
chrono = "0.4.19"
